# Zephyr_MQTT_nrf91

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  update_certs.py
boards/: nrf9160dk_nrf9160_ns.overlay
components/certs/: certificate.pem.crt  certs.c  certs.h  private.pem.key
components/lte/: lte.c  lte.h
components/mqtt/: mqtt.c  mqtt.h
src/: main.c
